# Speedometer

./: .gitignore  CMakeLists.txt  README.md  build.sh
desktop/client/: main.cpp
desktop/client/include/: canservice.h  canvas.h  comservice.h  tcpservice.h  window.h
desktop/client/src/: canservice.cpp  canvas.cpp  comservice.cpp  tcpservice.cpp  window.cpp
desktop/client/testfold/: canvas.h  client.pro  main.cpp  resources..qrc  run  window.h
desktop/server/: main.cpp
desktop/server/include/: canservice.h  comservice.h  tcpservice.h  window.h
desktop/server/src/: canservice.cpp  comservice.cpp  tcpservice.cpp  window.cpp
esp32/client/: platformio.ini
esp32/client/src/: main.cpp
esp32/server/: platformio.ini
esp32/server/src/: main.cpp
shared/: setting.h
